kubik_practice/manifests/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app-container
          image: skip1987/k8s-app:v3
          ports:
            - containerPort: 8080
